--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,9 @@ highlighter:      rouge
 
 # Setup
 title:            Yurim Jeon, Ph.D.
-tagline:          'A Jekyll theme'
 description:      'Ph.D. in Electrical and Computer Engineering'
 url:              https://fongandrew.github.io
-baseurl:          '/hydeout'
+baseurl:          '/blog'
                   # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
@@ -18,8 +17,8 @@ author:
   name:           'Yurim Jeon'
   url:            https://twitter.com/fongandrewc
 
-paginate:         5
-# paginate_path:    '/page:num'
+# paginate:         5
+# paginate_path:    '/page:index'
 #                     Or '/blog/page:num' if you want to move your index pages
 
 plugins:
@@ -30,6 +29,6 @@ plugins:
 # Sidebar link settings
 sidebar_home_link:  true
 # sidebar_blog_link:  '/blog'   # By default, your home page is your blog
-                                # page. If you change your paginate_path,
-                                # set this to the root of the paginate_path
-                                # to enable a separate blog link.
+#                                 # page. If you change your paginate_path,
+#                                 # set this to the root of the paginate_path
+#                                 # to enable a separate blog link.
