--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:      rouge
 # Setup
 title:            Yurim Jeon, Ph.D.
 description:      'Ph.D. in Electrical and Computer Engineering'
-url:              https://fongandrew.github.io
+url:              https://yurimjeon1892.github.io
 baseurl:          '/blog'
                   # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
@@ -15,7 +15,7 @@ baseurl:          '/blog'
 
 author:
   name:           'Yurim Jeon'
-  url:            https://twitter.com/fongandrewc
+  # url:            https://twitter.com/fongandrewc
 
 # paginate:         5
 # paginate_path:    '/page:index'
@@ -32,3 +32,6 @@ sidebar_home_link:  true
 #                                 # page. If you change your paginate_path,
 #                                 # set this to the root of the paginate_path
 #                                 # to enable a separate blog link.
+sidebar_sort_order:
+  - Research
+  - Project
