--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ highlighter:      rouge
 title:            Yurim Jeon, Ph.D.
 description:      'Ph.D. in Electrical and Computer Engineering'
 url:              https://yurimjeon1892.github.io
-baseurl:          '/blog'
+baseurl:          '/'
                   # the optional subpath of your site, e.g. "/blog"
                   # NB: This applies to all pages in your Jekyll site.
                   # If you want to move just the blog index pages but keep
